<resources>
    <string name="app_name">TwitterClone</string>
    <string name="button_name1">ShareText</string>
    <string name="button_name2">ShareImage</string>
    <string name="button_name3">ShareImgT</string>
    <string name="button_name4">ShareImages</string>
    <string name="button_name5">ShareImgView</string>
    <string name="button_name6">ShareVideos</string>
    <string name="button_name7">Open webPage</string>
    <string name="text">Press button you need</string>
    <string name="website_address">https://pdp.uz/</string>
</resources>